# TrumpBot

./: .env.example  .gitignore  BotFather_Commands.txt  README.md  docker-compose-postgres.yml  main.py  pyproject.toml  setup_db.py  simple_test.py
backup v0.1.0 (previous beta version)/: main.py
docs/: APP_ENHANCEMENT_SUMMARY.md  BOT_CONFIG_COMPLETION_SUMMARY.md  CALLBACKS_COMPLETION_SUMMARY.md  COMPLETION_SUMMARY.md  DATABASE_MANAGER_COMPLETION_SUMMARY.md  ENHANCEMENTS.md  ENHANCEMENTS_SUMMARY.md  ENHANCEMENT_SUMMARY_v2.1.md  ENVIRONMENT_SETUP.md  HELPERS_COMPLETION_SUMMARY.md  HELP_COMPLETION_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_GUIDE_v2.1.md  INVENTORY_COMPLETION_SUMMARY.md  ITEMS_COMPLETION_SUMMARY.md  LOCALIZATION_COMPLETION_SUMMARY.md  MESSAGES_COMPLETION_SUMMARY.md  RELEASE_NOTES.md  RELEASE_NOTES_v2.1.md  SHOP_COMPLETION_SUMMARY.md  STARS_COMPLETION_SUMMARY.md  STATS_COMPLETION_SUMMARY.md  STATUS_COMPLETION_SUMMARY.md  TG_STARS_DOCUMENTATION.md  TG_STARS_TESTING.md
src/: __init__.py  app.py
src/commands/: __init__.py  attack.py  general.py  help.py  inventory.py  shop.py  stars.py  stats.py  status.py
src/config/: __init__.py  bot_config.py  items.py
src/database/: __init__.py  db_manager.py
src/handlers/: __init__.py  callbacks.py  messages.py
src/utils/: __init__.py  helpers.py  localization.py  translations.py
